--- a/preprocessing/data_preprocessing(Interpolation).ipynb
+++ b/preprocessing/data_preprocessing(Interpolation).ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "f16e6b2a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 출력 생략 방지를 위한 설정\n",
+    "# 출력 생략 방지 크기 조절절\n",
     "pd.set_option('display.max_info_rows', 1000000)\n",
-    "pd.set_option('display.max_info_columns', 500)  # 혹은 더 크게 설정"
+    "pd.set_option('display.max_info_columns', 500)"
    ]
   },
   {
@@ -419,12 +419,12 @@
    "source": [
     "df = pd.read_csv('C:/Users/user/Desktop/zerosweet/output_data/preprocessing_data/Ver.05/refined_with_gi_non_duplicate(big_class).csv', encoding='utf-8-sig')\n",
     "\n",
-    "# 2. 키워드 리스트 정의\n",
+    "# 키워드 리스트 정의\n",
     "alt_sugar_keywords_safe = ['에리스리톨', '말티톨', '수크랄로스', '스테비아', '알룰로스']\n",
     "alt_sugar_keywords_caution = ['아스파탐', '사카린']\n",
     "caution_keywords = ['소르빈산', '벤조산', '나트륨', '아질산', '글루타민산나트륨', '설탕', '액상과당', '물엿']\n",
     "\n",
-    "# 3. 원재료명을 분리해서 각 카테고리별로 다시 넣어주는 함수\n",
+    "# 원재료명을 분리해서 각 카테고리별로 다시 넣어주는 함수\n",
     "def categorize_ingredients(ingredients):\n",
     "    parts = str(ingredients).split(',')\n",
     "    alt_sugar_safe = [p.strip() for p in parts if any(k in p for k in alt_sugar_keywords_safe)]\n",
@@ -438,13 +438,13 @@
     "        '안전':   ', '.join(safe)\n",
     "    })\n",
     "\n",
-    "# 4. 적용해서 새 컬럼 생성\n",
+    "# 적용해서 새 컬럼 생성\n",
     "df[['대체당(안전)', '대체당(주의)', '주의', '안전']] = df['원재료명'].apply(categorize_ingredients)\n",
     "\n",
-    "# 5. 결과 확인\n",
+    "# 결과 확인\n",
     "print(df[['원재료명', '대체당(안전)', '대체당(주의)', '주의', '안전']].head())\n",
     "\n",
-    "# 6. 필요하면 다시 CSV로 저장\n",
+    "# 필요하면 다시 CSV로 저장\n",
     "df.to_csv('c:/Users/user/Desktop/gg/cleaned_food_data_labeled.csv',\n",
     "          index=False, encoding='utf-8-sig')"
    ]
@@ -1966,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "e3ed106c",
    "metadata": {},
    "outputs": [
@@ -1990,22 +1990,22 @@
     }
    ],
    "source": [
-    "# 1. NaN 제거 및 문자열 나누기\n",
+    "# NaN 제거 및 문자열 나누기\n",
     "ingredients_series = df['원재료명'].dropna().str.split(',')\n",
     "\n",
-    "# 2. 분리된 리스트를 모두 펼쳐서 하나의 시리즈로\n",
+    "# 분리된 리스트를 모두 펼쳐서 하나의 시리즈로\n",
     "flat_ingredients = ingredients_series.explode().str.strip()\n",
     "\n",
-    "# 3. 빈도수 계산\n",
+    "# 빈도수 계산\n",
     "ingredient_counts = flat_ingredients.value_counts()\n",
     "\n",
-    "# 4. 퍼센트 계산\n",
+    "# 퍼센트 계산\n",
     "ingredient_percent = (ingredient_counts / len(flat_ingredients) * 100).round(2)\n",
     "\n",
-    "# 5. 순위 계산\n",
+    "# 순위 계산\n",
     "ingredient_rank = ingredient_counts.rank(method='dense', ascending=False).astype(int)\n",
     "\n",
-    "# 6. 데이터프레임으로 정리\n",
+    "# 데이터프레임으로 정리\n",
     "ingredient_stats = pd.DataFrame({\n",
     "    '빈도수': ingredient_counts,\n",
     "    '퍼센트': ingredient_percent,\n",
@@ -8868,7 +8868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "74464e38",
    "metadata": {},
    "outputs": [
@@ -8888,7 +8888,7 @@
    "source": [
     "# refined_df = pd.read_csv('C:/Users/user/Desktop/zerosweet/output_data/preprocessing_data/Ver.05/refined_with_gi_non_duplicate(big_class).csv', encoding='utf-8-sig')\n",
     "\n",
-    "# 3. 원재료명을 분리해서 각 카테고리별로 다시 넣어주는 함수\n",
+    "# 원재료명을 분리해서 각 카테고리별로 다시 넣어주는 함수\n",
     "def categorize_ingredients(ingredients):\n",
     "    parts = [p.strip() for p in str(ingredients).split(',') if p.strip()]\n",
     "    safe, care, warning, nothing = [], [], [], []\n",
@@ -8910,13 +8910,13 @@
     "        '그외': ', '.join(nothing)\n",
     "    })\n",
     "\n",
-    "# 4. 적용해서 새 컬럼 생성\n",
+    "# 적용해서 새 컬럼 생성\n",
     "refined_df[['안전', '유의', '주의', '그외']] = refined_df['원재료명'].apply(categorize_ingredients)\n",
     "\n",
-    "# 5. 결과 확인\n",
+    "# 결과 확인\n",
     "print(refined_df[['안전', '유의', '주의', '그외']].head())\n",
     "\n",
-    "# 6. 필요하면 다시 CSV로 저장\n",
+    "# 필요하면 다시 CSV로 저장\n",
     "refined_df.to_csv('C:/Users/user/Desktop/zerosweet/output_data/preprocessing_data/Ver.05/refined_new_label(big_class).csv',index=False, encoding='utf-8-sig')"
    ]
   },
